noinst_LIBRARIES = libgraphpack.a

libgraphpack_a_SOURCES = gr_edge.c gr_node.c gr_write.c gr_graph.c gr_parser.c \
	gr_drawing.c gr_structure.c gr_operations.c gr_window.c gr_util.c\
	gr_bary.c gr_tree.c gr_level.c gr_constrain.c gr_cons_cycle.c \
	gr_radial.c gr_radtree.c gr_authub.c gr_algorithms.c gr_invtree.c\
	gr_rank.c gr_gengraph.c gr_webgraph.c\
	queue.c llist.c hash_table.c timek.c alist.c \
	gr_xmlparser.c gr_xmlwrite.c \
	alist.h          gr_cons_cycle.h  gr_gengraph.h   gr_invtree.h  gr_operations.h  gr_rank.h       gr_webgraph.h   gr_xmlwrite.h  timek.h \
	gr_algorithms.h  gr_constrain.h   gr_graph.h      gr_level.h    gr_parser.h      gr_structure.h  gr_window.h     hash_table.h \
	gr_authub.h      gr_drawing.h     gr_graph_fun.h  gr_node.h     gr_radial.h      gr_tree.h       gr_write.h      llist.h \
	gr_bary.h        gr_edge.h        gr_graph_p.h    gr_node_p.h   gr_radtree.h     gr_util.h       gr_xmlparser.h  queue.h
	
INCLUDES = -I$(WWW_LIB_DIR)

AM_CFLAGS = -ggdb -g3
